--- a/assets/scss/bluma.scss
+++ b/assets/scss/bluma.scss
@@ -1,4 +1,7 @@
 @import "~bulma/sass/utilities/initial-variables";
 @import "~bulma/sass/utilities/functions";
-@import "~bulma/bulma";
+@import "common";
 
+$primary: $dark;
+
+@import "~bulma/bulma";
