--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -4,3 +4,6 @@ $gray: #f6f6e9;
 $orange: #fd5f00;
 $white: #ffffff;
 $whitesmoke: #fff7f7;
+$mainBlue: #2988d5;
+$lightBlue: #6fb9f0;
+$black: #333333;
